--- a/styleshheet.css
+++ b/styleshheet.css
@@ -26,6 +26,13 @@
     src: url("assets/fonts/lato/Lato-Bold.ttf");
 }
 
+@font-face {
+    font-family: "lato_light";
+    font-style: normal;
+    font-weight: lighter;
+    src: url("assets/fonts/lato/Lato-Light.ttf");
+}
+
 
 header{
     margin-top: 2%;
@@ -63,6 +70,7 @@ header{
   .search_button{
     background-color: #E7E7E7 !important;
     border: none !important;
+    
   }
   
   .text-icon{
@@ -73,6 +81,7 @@ header{
   #search_and_select{
     display: flex;
     flex-direction: row;
+    align-items: flex-start;
     margin-top:2%;
   }
   
@@ -81,14 +90,18 @@ header{
     border-radius: 5px; 
     font-size: 18px;
     font-family: "lato_bold"!important; 
-    padding: 1.6%;
+    padding: 2%;
+    z-index: 2;
   }
 
   .button_select > span{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
   }
+
+ 
 
   .icon_btn {
    -webkit-text-stroke: 2px;
@@ -113,6 +126,7 @@ header{
   }
   
   #select_ingredients{
+    cursor: pointer;
     background-color:#3282F7;
     margin-right: 2%;
   }
@@ -120,7 +134,6 @@ header{
   
   
   #select_appareil{
-    
     background-color:#68D9A4;
     margin-right: 2%;
   }
@@ -128,11 +141,36 @@ header{
   #select_unstensils{
      background-color:#ED6454;
   }
+
+  .advance_search_results{
+      max-height: 350px;
+      font-family: "lato_light";
+      margin : 0;
+      padding: 0;
+  }
+
+  .advance_search_results > li {
+      overflow: hidden;
+      margin-top: 10px;
+  }
+
+  .open{
+     width: 667px;
+  }
+
+  .open::placeholder{
+      font-family:"lato_regular";
+      font-weight: 400;
+      opacity: 50%;
+  }
   
   #recipes_wrap{
     margin-top : 5%;
     padding-left:1%;
     padding-right: 1%; 
+    z-index: 1;
+    position: absolute;
+    top: 40%;
   }
   
   .card_custom{
