--- a/styleshheet.css
+++ b/styleshheet.css
@@ -113,13 +113,17 @@ header{
       background-color: transparent;
       border-style: none;
       color: white;
-
+      width: 0;
   }
 
   #buttons_container{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
+  width: 88%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  padding: 0;
+  z-index: 2;
+  position: absolute;
   }
 
   .top_button{
@@ -127,11 +131,21 @@ header{
     flex-direction: row;
   }
 
-  .search_and_select_buttons::placeholder{
-      font-family: "lato_bold"!important;
-      color: white;
-      font-size: 18px;
+  .button{
+    background-color: transparent;
+    font-family: "lato_bold"!important;
+    color: white;
+    font-size: 18px;
+    box-shadow: none;
+    border: none;
   }
+
+  .search_and_select_buttons::placeholder{
+    font-family: "lato_bold"!important;
+    color: white;
+    font-size: 18px;
+   opacity: 50%;
+}
 
 
   .search_and_select_buttons:focus{
@@ -141,10 +155,10 @@ header{
   #select_ingredients{
     cursor: pointer;
     background-color:#3282F7;
+    white-space: nowrap;
+    color: white;
     margin-right: 2%;
     border: none;
-    border-radius: 5px;
-    padding: 2%;
   }
 
   
@@ -157,9 +171,9 @@ header{
   #select_ustensils{
      background-color:#ED6454;
   }
-  
 
 
+ 
   .advance_search_results{
     position: static !important;
     background: transparent !important;
@@ -211,37 +225,39 @@ header{
   }
 
   
-
-  .open{
-     width: 300px;
-  }
-
-  .open::placeholder{
-      font-family:"lato_regular";
-      color: white;
-      font-weight: 400;
-      opacity: 50%;
-  }
   
+
+ .open{
+   height: auto;
+ }
+
+  
+ .close{
+   height: 79px;
+ }
+
+
+ 
   #recipes_wrap{
     width: 100%;
     display: flex;
-    justify-content: flex-start;
-    margin-top : 5%;
+    margin-top: 150px;
     z-index: 1;
-    position: absolute;
-    top: 47%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: space-between;
   }
   
   .card_custom{
     padding: 0 !important;
     font-family:"lato_regular";
     margin-bottom: 5%;
-    margin-right: 5%;
     padding-left:1%;
     padding-right: 1%; 
      background-color:#E7E7E7 !important;
      border: none !important;
+     width: 380px;
   }
   
   .img_custom{
@@ -294,10 +310,6 @@ header{
       overflow: hidden;
   }
 
-.visible{
-    display: block;
-}
-
-.invsible{
-    display: none;
+.invisible{
+visibility: hidden;
 }
