correction  selection data

--- a/styleshheet.css
+++ b/styleshheet.css
@@ -198,6 +198,7 @@ position: absolute;
     color: white;
     float: left;
     width: 33%;
+    white-space: normal;
     overflow: hidden;
 }
 .add_tag::first-letter{
