--- a/media_queries.css
+++ b/media_queries.css
@@ -1,4 +1,7 @@
 @media screen and (max-width: 374px) {
+  #groupe_barre_de_recherche{
+    width: 100%;
+  }
   .recipe_name {
     width: 70%;
     font-size: 14px;
@@ -10,9 +13,23 @@
   #select_appareil,
   #select_ustensils {
     width: 93%;
+    max-width: none;
   }
+
+  .buttons_container{
+    width: 100%;
+  }
+
+  .card_space{
+    margin-right: 0;
+  }
+  
 }
 @media screen and (max-width: 767px) {
+  #groupe_barre_de_recherche{
+    width: 100%;
+  }
+
   #tags {
     height: auto;
 
@@ -32,17 +49,22 @@
     text-overflow: ellipsis;
   }
   #buttons_container {
-    width: 100%;
+    width:94%;
     left: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    align-content: stretch;
+    flex-wrap: wrap;
+    margin-left: 3%;
   }
 
   .button_select {
-    width: 94%;
+    width: 100%;
     margin: 0;
     padding: 2%;
+    max-width: none;
   }
   #select_ingredients,
   #select_appareil {
@@ -72,8 +94,15 @@
   .card_custom {
     width: 100%;
   }
+
+  .card_space{
+    margin: 0;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+  #recipes_wrap{
+   justify-content: space-between;
+  }
   .card_custom {
     width: 330px;
   }
@@ -88,5 +117,8 @@
     width: 49%;
     white-space: normal;
     text-overflow: ellipsis;
+  }
+  .card_space{
+    margin: 0;
   }
 }
